--- a/main.css
+++ b/main.css
@@ -27,6 +27,9 @@ body {
   
   .birthdayCard {
     user-select: none;
+    -webkit-user-select: none; /* Chrome/Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
     position: relative;
     width: 250px;
     height:350px;
